# CSERIO

./: .gitignore  LICENSE  Makefile  Makefile.am  Makefile.in  README.md  compile_commands.json  configure  configure.ac  cserio.c  cserio.h
.cache/clangd/index/: cserio.c.806505587BE2158C.idx  cserio.h.1E882018D4D34518.idx  cserio.h.B68297443444165E.idx  main.c.8660281B5AE64ECD.idx
docs/: cserio.md
src/: Makefile.am  Makefile.in  cserio.c  cserio.h  errors.h  header_routines.c  header_routines.h  img_routines.c
src/.deps/: cserio.Po
tests/: Makefile  core.c  create_file.c  create_memory.c  get_metadata.c  header_get.c  header_read.c  header_set.c  header_write.c  image_info.c  image_read.c  image_write.c  main.c  open_file.c  open_memory.c  open_view.c  ser_test_data.h  suites.h  temp_files.c  temp_files.h  test_core_routines.c  test_core_routines.h  test_header_routines.c  test_img_routines.c  test_routines.h  test_utils.c  test_utils.h  testsMain.c  tests_main.c  trailer.c  trailer_read.c
