# static library
lib_LIBRARIES = libcserio.a

# Header files
include_HEADERS = cserio.h errors.h header_routines.h

# Source files
libcserio_a_SOURCES = cserio.c header_routines.c

# Installation path for library and header files
libcserio_a_INSTALL = $(libdir)
include_HEADERS_INSTALL = $(includedir)

